# SBTM-sampling

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.sh
docs/: mkdocs.yml
docs/docs/: index.md
sbtm/: __init__.py  dataset.py  density.py  features.py  plots.py
sbtm/modeling/: predict.py  train.py
scripts/: 1.0-bp-sbtm-exploratory.py  2.0-bp-sbtm-train-NN.py
tests/: test_environment.py
